--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ejs-electron": "^2.1.1",
     "electron-squirrel-startup": "^1.0.0",
     "sqlite": "^4.0.21",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "git@github.com:mapbox/node-sqlite3.git#3fb3715c4e699ca3bc19e47b136758c66f61e477"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
